@@ -22,6 +22,9 @@ debian-installer (20031213) UNRELEASED; urgency=low
     - Include INSTALLATION-HOWTO there too, by way of a gross, gross hack.
     - netcfg reorg
     - scsi-common-modules reorg
+    - Grep out several encodings that confuse reduce-font:
+      ISO-8859-*, EUC-JP, CP1251. This is a temporary hackaround to get it
+      building again.
   * Thiemo Seufer
     - Build the demo tree only for architectures which support it.
     - Don't build images for the demo target.
